test/types/records/ferguson/default-compare-mixed-insn.4.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:22: error: type mismatch in assignment from R(int(64)) to R(int(32))
